--- a/index.html
+++ b/index.html
@@ -113,16 +113,32 @@
                     <div class="about__services">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.</div>
                     <div class="services__list">
                         <div class="services">
-                            <img src="assets/img/web-design.svg" alt="" class="services__icon">
+                            <img src="assets/img/monitor.png" alt="" class="services__icon">
+                            <div class="services__about-text">
+                                <p class="services__about-title">WEB DESIGN</p>
+                                <p class="services__about-subtext">The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                            </div>
                         </div>
                         <div class="services">
-                            <img src="" alt="" class="services__icon">
+                            <img src="assets/img/mob.png" alt="" class="services__icon">
+                            <div class="services__about-text">
+                                <p class="services__about-title">MOBILE APPS</p>
+                                <p class="services__about-subtext">The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                            </div>
                         </div>
                         <div class="services">
-                            <img src="" alt="" class="services__icon">
+                            <img src="assets/img/photo.png" alt="" class="services__icon">
+                            <div class="services__about-text">
+                                <p class="services__about-title">PHOTOGRAPHY</p>
+                                <p class="services__about-subtext">The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                            </div>
                         </div>
                         <div class="services">
-                            <img src="" alt="" class="services__icon">
+                            <img src="assets/img/micro.png" alt="" class="services__icon">
+                            <div class="services__about-text">
+                                <p class="services__about-title">MARKETING</p>
+                                <p class="services__about-subtext">The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -193,7 +209,11 @@
                             <label for="" class="contact__label">Message<span class="label__star-red">*</span></label>
                             <input type="text" class="message">
                         </div>
-                        
+                        <div class="form__button">
+                            <button>
+                                SEND
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
